2009-01-19  David Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/extString.ml: [nsplit] rewritten

	* src/core/extlib/extString.ml*: [find_from] added

	
2009-01-18  David Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/extBuffer.ml*: applied Dawid Toton's patch

	* src/core/extlib/extBuffer.ml: [TYPE_CONV_PATH] adapted

	* src/core/extlib/extUnix.ml: [open_connection] now uses [ **> ] instead of [ <| ]

	* src/core/extlib/extPervasives.mli: <| renamed **>, |> renamed <**

	* src/core/extlib/std.ml*: <| renamed **>, |> renamed <**


2009-01-11  David Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/rope.ml: [sub] now defined from a function [aux]
	
	* src/core/extlib/rope.ml: [left], [right], [head], [tail] now use new order of arguments for [sub]
	
	* src/core/extlib/rope.mli: changed order of arguments in [sub]

	* src/core/extlib/uCharParser.ml: [Rope.concat] replaced with [Rope.append]

	* src/core/extlib/rope.ml*: [concat_sep] renamed [concat]

	* src/core/extlib/rope.ml: [append] renamed [append_us]

	* src/core/extlib/path.ml: [RopeAdapter.length_bytes] is now defined from [Rope.length]

	* src/core/extlib/rope.mli: [compare], [compare_without_case] added

	* src/core/extlib/extPervasives.ml: [Enum] now not included anymore

	* src/core/extlib/rope.ml: [compare] implemented

	* src/core/extlib/rope.ml: [compare_without_case] implemented

	* src/core/extlib/enum.ml*: [compare] added

	* src/core/extlib/enum.mli: added documentation hyperlink to [Stream]

	* src/core/extlib/path.ml: replaced [R.of_string] with [R.of_latin1]
	
2009-01-11  David Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/path.ml: added

	* src/core/extlib/path.mli: added

2009-01-06  David Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/interfaces.ml*: header added

	* build/odoc_tags.ml: [generate_element_index_by_topic] now prints exception in case of error
