@@ -38,7 +38,6 @@ sig
 
 
 exception Invalid_string
-
 (** An exception thrown when some operation required a string
     and received an unacceptable string.*)
 
@@ -186,14 +185,29 @@ val rcontains_from : string -> int -> char -> bool
 
 
 val find : string -> string -> int
-  (** [find s x] returns the starting index of the string [x]
-      within the string [s] 
+  (** [find s x] returns the starting index of the first occurrence of
+      string [x] within string [s].
+
+      {b Note} This implementation is optimized for short strings.
 
       @raise Invalid_string if [x] is not a substring of [s]. *)
 
 val find_from: string -> int -> string -> int
-  (** [find s ofs x] behaves as [find s x] but starts searching
-      at offset [ofs].*)
+  (** [find_from s ofs x] behaves as [find s x] but starts searching
+      at offset [ofs]. [find s x] is equivalent to [find_from s 0 x].*)
+
+val rfind : string -> string -> int
+  (** [rfind s x] returns the starting index of the last occurrence
+      of string [x] within string [s].
+
+      {b Note} This implementation is optimized for short strings.
+
+      @raise Invalid_string if [x] is not a substring of [s]. *)
+
+val rfind_from: string -> int -> string -> int
+  (** [rfind_from s ofs x] behaves as [rfind s x] but starts searching
+      at offset [ofs]. [rfind s x] is equivalent to [rfind_from s (String.length s - 1) x].*)
+
 
 val ends_with : string -> string -> bool
   (** [ends_with s x] returns true if the string [s] is ending with [x]. *)
